--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
 
     - name: Create ZIP archive with version in name
       run: |
-        zip -r pf2e-galactic-hero-points-variant-${VERSION}.zip pf2e-galactic-hero-points-variant/
+        zip -r pf2e-galactic-hero-points-variant-${VERSION}.zip . -x .git/**\*
       
     - name: Upload artifact
       uses: actions/upload-artifact@v4
